feature: сorrecting padding according to layout

--- a/src/shared/ui/Button/Button.module.css
+++ b/src/shared/ui/Button/Button.module.css
@@ -3,7 +3,7 @@
   height: 48px;
   border: none;
   border-radius: 12px;
-  padding: 0 12px;
+  padding: 12px 24px;
   color: var(--text-dominant);
   font-family: var(--typeface-body);
   font-weight: 400;
