--- a/src/shared/ui/RadioButton/RadioButton.module.css
+++ b/src/shared/ui/RadioButton/RadioButton.module.css
@@ -24,13 +24,14 @@
 .radio::after {
   content: "";
   position: absolute;
-  top: 3.5px;
-  left: 3.5px;
+  top: 50%;
+  left: 50%;
   width: 10px;
   height: 10px;
   border-radius: 50%;
   background-color: transparent;
   transition: 0.2s background;
+  transform: translate(-50%, -50%);
 }
 
 .radio:checked {
