--- a/src/widgets/SkillsMenu/SkillsMenu.module.css
+++ b/src/widgets/SkillsMenu/SkillsMenu.module.css
@@ -1,13 +1,13 @@
 .menu {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 0 20px;
-  padding: 16px 25px;
+  display: flex;
+  gap: 40px;
+  flex-flow: column wrap;
+  padding: 60px;
   max-width: 1200px;
+  max-height: 1040px;
 }
 
 .category {
-  padding: 16px 12px;
   display: grid;
   grid-template-columns: 40px 436px;
   gap: 12px;
@@ -47,7 +47,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  gap: 4px;
+  gap: 12px;
 }
 
 .subcategoryLink {
@@ -57,8 +57,8 @@
   font-size: 16px;
   font-weight: 400;
   line-height: 24px;
-  padding: 4px 0;
   transition: color 0.2s ease;
+  flex-grow: 1;
 }
 
 .subcategoryLink:hover {
