--- a/src/shared/ui/FilterSection/FilterSection.module.css
+++ b/src/shared/ui/FilterSection/FilterSection.module.css
@@ -1,8 +1,6 @@
 .section {
     display: flex;
     flex-direction: column;
-    gap: 12px;
-    margin-bottom: 32px;
 }
 
 .filterGroup {
@@ -37,6 +35,7 @@
     line-height: 24px;
     border: none;
     cursor: pointer;
+    margin-top: 12px;
 }
 
 .button:hover {
