--- a/src/widgets/FilterSidebar/FilterSidebar.module.css
+++ b/src/widgets/FilterSidebar/FilterSidebar.module.css
@@ -53,9 +53,10 @@
 }
 
 .checkboxWrapper {
-    height: 24px;
     display: flex;
+    justify-content: space-between;
     align-items: center;
+    height: 24px;
 }
 
 .cityCheckboxWrapper {
