--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -35,6 +35,12 @@
   line-height: 22px;
 }
 
+/* Контейнер для кнопки закрытия */
+.closeButtonContainer {
+  width: auto;
+  display: inline-block;
+}
+
 
 
 /* Секция прогресса */
