сделал шаг 1 из 3

--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -51,7 +51,7 @@
 }
 
 .stepText {
-  color: #253017;
+  color: var(--text-dominant);
   font-family: var(--typeface-headings);
   font-size: 24px;
   font-weight: 500;
