Исправленны svg (по рекомендации)

--- a/src/widgets/SkillCard/SkillCard.module.css
+++ b/src/widgets/SkillCard/SkillCard.module.css
@@ -20,9 +20,20 @@
 .icon {
     width: 24px;
     height: 24px;
-    object-fit: contain;
-    display: block;
+    background: none;
+    border: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
+}
+
+.icon svg {
+    width: 24px;
+    height: 24px;
+    display: block;
 }
 
 .body {
