--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -11,8 +11,10 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 24px;
+  padding: 40px 24px 0;
   background-color: var(--bg-primary);
+  height: 84px;
+  box-sizing: border-box;
 }
 
 .logo {
@@ -79,7 +81,7 @@
 /* Секция прогресса */
 .progressSection {
   text-align: center;
-  padding: 24px;
+  padding: 0 24px;
   background-color: var(--bg-primary);
 }
 
@@ -116,7 +118,7 @@
   flex: 1;
   max-width: 1440px;
   margin: 0 auto;
-  padding: 32px 24px;
+  padding: 32px 24px 172px;
   width: 100%;
 }
 
@@ -130,8 +132,6 @@
 }
 
 .formSection {
-  max-width: 486px;
-  margin: 0 auto;
   width: 100%;
   background-color: var(--surface-main);
   padding: 121.5px 60px;
