fix: исправил верстку меню навыков
- Переделал раскладку SkillsMenu с flex wrap на CSS Grid для корректного отображения фона
- Убрал ограничение min-width в DropdownBase для правильного позиционирования
- Добавил поддержку className в DropdownBase для кастомного позиционирования
- Настроил позиционирование меню от левого края страницы с учетом границ viewport
- Упростил логику данных в SkillsMenu, убрав ненужную перестановку элементов

--- a/src/widgets/Header/Header.module.css
+++ b/src/widgets/Header/Header.module.css
@@ -68,6 +68,12 @@
     position: relative;
 }
 
+/* Позиционирование SkillsMenu dropdown от левого края страницы */
+.skillsMenuDropdown {
+    left: -300px; /* Умеренное смещение влево */
+    width: 1200px;
+}
+
 .chevron-down svg{
     width: 16px;
     height: 7.94px;
