--- a/src/shared/ui/Button/Button.module.css
+++ b/src/shared/ui/Button/Button.module.css
@@ -1,4 +1,8 @@
 .button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
   width: 100%;
   height: 48px;
   border: none;
@@ -34,13 +38,13 @@
 }
 
 .button-secondary {
-  background-color: var(--surface-main);
   border: 1px solid var(--accent-primary);
+  background-color: var(--surface-main);
 }
 
 .button-secondary:hover {
-  color: var(--text-secondary);
   border-color: var(--action-hover);
+  color: var(--text-secondary);
 }
 
 .button-secondary:active {
@@ -49,8 +53,8 @@
 }
 
 .button-secondary:disabled {
-  color: var(--text-inactive);
   border-color: var(--state-disabled);
+  color: var(--text-inactive);
   cursor: initial;
 }
 
@@ -65,7 +69,7 @@
 .button-transparent {
   display: flex;
   align-items: center;
-  background-color: transparent;
-  padding: 0;
   gap: 4px;
+  padding: 0;
+  background-color: transparent;
 }
