fix: Убран курсор у элемента с ошибкой

--- a/src/shared/ui/ComboInput/ComboInput.module.css
+++ b/src/shared/ui/ComboInput/ComboInput.module.css
@@ -74,6 +74,10 @@
   cursor: pointer;
 }
 
+.list__item_inactive {
+  cursor: initial;
+}
+
 .list__item:hover {
   background-color: var(--action-hover);
 }
