--- a/src/shared/ui/ComboInput/ComboInput.module.css
+++ b/src/shared/ui/ComboInput/ComboInput.module.css
@@ -8,10 +8,16 @@
   line-height: 24px;
 }
 
+.inputWrapper {
+  position: relative;
+  width: 100%;
+}
+
 .input {
-  margin-top: 4px;
+  position: relative;
   width: 100%;
   height: 48px;
+  margin-top: 4px;
   border: 1px solid var(--text-secondary);
   border-radius: 12px;
   padding: 12px 20px;
@@ -26,23 +32,36 @@
   border-bottom-left-radius: 0;
 }
 
+.input__button {
+  position: absolute;
+  top: 55%;
+  right: 24px;
+  z-index: 1;
+  border: none;
+  outline: none;
+  color: var(--text-secondary);
+  background-color: transparent;
+  transform: translateY(-45%);
+  cursor: pointer;
+}
+
 .list {
   position: absolute;
   top: 100%;
   right: 0;
   left: 0;
+  box-sizing: border-box;
+  max-height: calc(3 * 48px);
   border: 1px solid var(--text-secondary);
   border-top: none;
   border-bottom-right-radius: 12px;
   border-bottom-left-radius: 12px;
-  background-color: var(--surface-main);
   opacity: 0;
+  overflow-y: auto;
+  background-color: var(--surface-main);
+  transition: opacity 0.2s ease, transform 0.2s ease;
   transform: translateY(-4px);
   pointer-events: none;
-  transition: opacity 0.2s ease, transform 0.2s ease;
-  max-height: calc(3 * 48px);
-  overflow-y: auto;
-  box-sizing: border-box;
 }
 
 .list::-webkit-scrollbar {
@@ -54,8 +73,8 @@
 }
 
 .list::-webkit-scrollbar-thumb {
-  background-color: var(--state-disabled);
   border-radius: 4px;
+  background-color: var(--state-disabled);
 }
 
 .list_visible {
