--- a/src/pages/Registration/Registration.module.css
+++ b/src/pages/Registration/Registration.module.css
@@ -43,6 +43,15 @@
   display: inline-block;
 }
 
+.closeButtonText {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  display: inline-flex;
+  align-items: center;
+  gap: 8px;
+}
+
 /* Секция прогресса */
 .progressSection {
   text-align: center;
