--- a/src/shared/ui/Select/Select.module.css
+++ b/src/shared/ui/Select/Select.module.css
@@ -17,7 +17,7 @@
 .select {
     position: relative;
     height: 48px;
-    padding-left: 20px;
+    padding: 0 20px;
     border: 1px solid var(--text-dominant);
     border-radius: 12px;
     transition: all 0.2s ease;
