--- a/src/widgets/FilterSidebar/FilterSidebar.module.css
+++ b/src/widgets/FilterSidebar/FilterSidebar.module.css
@@ -1,5 +1,5 @@
 .filterSidebar {
-    padding: 20px;
+    padding: 20px 20px 20px 23px;
     background-color: var(--surface-main);
     border-radius: 12px;
     box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
