--- a/src/shared/ui/Select/Select.module.css
+++ b/src/shared/ui/Select/Select.module.css
@@ -1,7 +1,7 @@
 .selectContainer {
     position: relative;
     width: 100%;
-    max-width: 400px;
+    max-width: 436px;
     font-family: var(--typeface-body);
 }
 
@@ -12,31 +12,34 @@
     line-height: 24px;
     font-weight: 400;
     color: var(--text-dominant);
+    letter-spacing: 0.3px;
 }
 
 .select {
     position: relative;
     height: 48px;
     padding: 0 20px;
-    border: 1px solid var(--text-dominant);
-    border-radius: 12px;
-    transition: all 0.2s ease;
+    border: 1px solid #69735D;
+    border-radius: 11px;
     background-color: white;
-    cursor: pointer;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 2;
 }
 
 .disabled {
     background-color: #f5f5f5;
     cursor: not-allowed;
     opacity: 0.7;
+    border-color: #E4E8DF;
 }
 
 .selectedValue {
-    color: var(--text-secondary);
+    color: var(--text-dominant);
     flex-grow: 1;
+    font-size: 16px;
+    line-height: 24px;
 }
 
 .placeholder {
@@ -44,6 +47,7 @@
     line-height: 24px;
     font-weight: 400;
     color: var(--text-secondary);
+    letter-spacing: 0.3px;
 }
 
 .arrow {
@@ -53,6 +57,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    color: #69735D;
 }
 
 .arrow.open {
@@ -60,56 +65,85 @@
 }
 
 .dropdown {
-    position: absolute;
     top: 100%;
     left: 0;
     right: 0;
-    background-color: white;
-    border: 1px solid var(--text-dominant);
     border-top: none;
     border-radius: 0 0 12px 12px;
-    margin-top: -1px;
-    box-shadow: 0 2px 8px rgb(0 0 0 / 10%);
+    z-index: 1;
+    margin: 8px 13px;
     max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out, opacity 0.2s ease-out;
     opacity: 0;
-    z-index: 10;
-    padding: 14px;
+    overflow: hidden;
+    transition: all 0.3s ease-out;
 }
 
 .dropdown.open {
     display: flex;
     flex-direction: column;
-    gap: 8px;
+    gap: 4px;
     max-height: 300px;
     opacity: 1;
     overflow-y: auto;
 }
 
 .option {
-    padding: 4px 6px;
+    padding: 8px;
     cursor: pointer;
     transition: background-color 0.2s;
+    border-radius: 8px;
 }
 
 .selectContainer.active .select {
-    border-radius: 12px 12px 0 0;
-    border-bottom: 1px solid black;
+    border-bottom: 1px solid #E4E8DF;
+    border-bottom-left-radius: 24px;
+    border-bottom-right-radius: 24px;
+    border-left-color: transparent;
+    border-right-color: transparent;
+    border-top-color: transparent;
+    margin: 0 -8px;
+    padding: 0 26px;
 }
 
-.selectWrapper.active {
+.selectWrapper {
     position: relative;
     border-radius: 12px;
+    overflow: hidden;
+    padding: 1px;
+}
+
+.selectContainer.active .selectWrapper {
+    border: 1px solid #69735D;
+    border-radius: 12px;
+    padding: 0;
+    background-color: white;
 }
 
 .selectWrapper.active::after {
-    content: '';
-    position: absolute;
-    inset: 0;
-    border: 1px solid var(--text-dominant);
-    border-radius: 12px;
-    pointer-events: none;
-    z-index: 11;
+    display: none;
 }
 
+.selectWrapper::before,
+.selectWrapper::after {
+    content: '';
+    position: absolute;
+    bottom: -1px;
+    width: 100%;
+    height: 1px;
+    background-color: #69735D;
+    z-index: 3;
+    display: none;
+}
+
+.selectWrapper::before {
+    left: 0;
+}
+
+.selectWrapper::after {
+    right: 0;
+}
+
+.selectContainer.active .selectWrapper::before,
+.selectContainer.active .selectWrapper::after {
+    display: block;
+}
