--- a/src/shared/ui/Checkbox/Checkbox.module.css
+++ b/src/shared/ui/Checkbox/Checkbox.module.css
@@ -3,53 +3,46 @@
   align-items: center;
   column-gap: 10px;
   cursor: pointer;
-  height: 32px;
-}
-
-.checkbox {
+  height: 24px;
   position: relative;
-  width: 20px;
-  height: 20px;
-  border: 1px solid #000;
-  border-radius: 30%;
-  outline: none;
-  background-color: var(--surface-main);
-  transition: background-color 0.2s ease, border-color 0.2s ease;
+  padding-left: 34px;
+}
+
+.checkboxInput {
+  width: 24px;
+  height: 24px;
+  opacity: 0;
   cursor: pointer;
-  appearance: none;
-}
-
-.checkbox:focus-visible {
-  outline: 1px solid #000;
-}
-
-.checkbox:checked {
-  border-color: var(--accent-primary); 
-  background-color: var(--accent-primary);
-}
-
-.checkbox:checked::after {
-  content: "";
   position: absolute;
+  left: 0;
   top: 50%;
-  left: 50%;
-  width: 3px;
-  height: 8px;
-  border: solid var(--surface-main);
-  border-width: 0 2px 2px 0;
-  border-radius: 1px;
-  transform: translate(-50%, -50%) rotate(45deg);
+  transform: translateY(-50%);
+  z-index: 1;
+}
+
+.checkboxIcon {
+  width: 24px;
+  height: 24px;
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  flex-shrink: 0;
+}
+
+.checkboxIcon:focus-visible {
+  outline: 1px solid var(--accent-primary);
+  border-radius: 30%;
 }
 
 .label {
   display: flex;
   align-items: center;
-  gap: 98px;
   font-family: var(--typeface-body);
   font-weight: 400;
   font-size: 16px;
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
-  max-width: calc(100% - 32px);
+  max-width: calc(100% - 12px);
 }
