--- a/src/shared/ui/NestedCheckboxGroup/NestedCheckboxGroup.module.css
+++ b/src/shared/ui/NestedCheckboxGroup/NestedCheckboxGroup.module.css
@@ -20,6 +20,12 @@
   fill: var(--accent-primary);
 }
 
+.subtractIcon {
+  width: 20px;
+  height: 20px;
+  margin: 2px;
+}
+
 .titleArea {
   flex-grow: 1;
   display: flex;
@@ -52,6 +58,9 @@
 }
 
 .children {
-  padding-left: 36px;
-  margin-top: 8px;
+  padding-left: 32px;
+  margin-top: 15px;
+  display: flex;
+  flex-direction: column;
+  gap: 12px;
 }
