--- a/src/shared/ui/Select/Select.module.css
+++ b/src/shared/ui/Select/Select.module.css
@@ -1,149 +1,126 @@
 .selectContainer {
-    position: relative;
-    width: 100%;
-    max-width: 436px;
-    font-family: var(--typeface-body);
+  position: relative;
+  width: 100%;
+  max-width: 400px;
+  font-family: var(--typeface-body);
 }
 
 .label {
-    display: block;
-    margin-bottom: 4px;
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-    color: var(--text-dominant);
-    letter-spacing: 0.3px;
+  display: block;
+  margin-bottom: 4px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: var(--text-dominant);
 }
 
 .select {
-    position: relative;
-    height: 48px;
-    padding: 0 20px;
-    border: 1px solid #69735D;
-    border-radius: 11px;
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 2;
+  position: relative;
+  height: 48px;
+  padding: 0 20px;
+  border: 1px solid var(--text-dominant);
+  border-radius: 12px;
+  transition: all 0.2s ease;
+  background-color: white;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .disabled {
-    background-color: #f5f5f5;
-    cursor: not-allowed;
-    opacity: 0.7;
-    border-color: #E4E8DF;
+  background-color: #f5f5f5;
+  cursor: not-allowed;
+  opacity: 0.7;
 }
 
 .selectedValue {
-    color: var(--text-dominant);
-    flex-grow: 1;
-    font-size: 16px;
-    line-height: 24px;
+  color: var(--text-secondary);
+  flex-grow: 1;
 }
 
 .placeholder {
-    font-size: 16px;
-    line-height: 24px;
-    font-weight: 400;
-    color: var(--text-secondary);
-    letter-spacing: 0.3px;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  color: var(--text-secondary);
 }
 
 .arrow {
-    transition: transform 0.2s;
-    width: 20px;
-    height: 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #69735D;
+  transition: transform 0.2s;
+  width: 20px;
+  height: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .arrow.open {
-    transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .dropdown {
-    top: 100%;
-    left: 0;
-    right: 0;
-    border-top: none;
-    border-radius: 0 0 12px 12px;
-    z-index: 1;
-    margin: 8px 13px;
-    max-height: 0;
-    opacity: 0;
-    overflow: hidden;
-    transition: all 0.3s ease-out;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  background-color: white;
+  border: 1px solid var(--text-dominant);
+  border-top: none;
+  border-radius: 0 0 12px 12px;
+  margin-top: -1px;
+  max-height: 0;
+  overflow: hidden;
+  transition:
+    all 0.3s ease-out;
+  opacity: 0;
+  z-index: -10;
+  padding: 14px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
 
-.dropdown.open {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-    max-height: 300px;
-    opacity: 1;
-    overflow-y: auto;
+.dropdown.open {  
+  top: 100%;
+  max-height: 300px;
+  opacity: 1;
+  overflow-y: auto;
+  z-index: 10;
 }
 
 .option {
-    padding: 8px;
-    cursor: pointer;
-    transition: background-color 0.2s;
-    border-radius: 8px;
+  padding: 4px 6px;
+  cursor: pointer;
+  transition: background-color 0.2s;
 }
 
 .selectContainer.active .select {
-    border-bottom: 1px solid #E4E8DF;
-    border-bottom-left-radius: 24px;
-    border-bottom-right-radius: 24px;
-    border-left-color: transparent;
-    border-right-color: transparent;
-    border-top-color: transparent;
-    margin: 0 -8px;
-    padding: 0 26px;
+  border-radius: 12px 12px 0 0;
+  border-bottom: none;
+  z-index: 20;
 }
 
-.selectWrapper {
-    position: relative;
-    border-radius: 12px;
-    overflow: hidden;
-    padding: 1px;
+.selectContainer.active .select::after {
+  content: '';
+  border: 1px solid rgb(0 0 0 / 10%);
+  position: absolute;
+  inset: -1px;
+  border-radius: 12px;
+  z-index: 30;
 }
 
-.selectContainer.active .selectWrapper {
-    border: 1px solid #69735D;
-    border-radius: 12px;
-    padding: 0;
-    background-color: white;
+.selectWrapper.active {
+  position: relative;
+  border-radius: 12px;
 }
 
 .selectWrapper.active::after {
-    display: none;
-}
-
-.selectWrapper::before,
-.selectWrapper::after {
-    content: '';
-    position: absolute;
-    bottom: -1px;
-    width: 100%;
-    height: 1px;
-    background-color: #69735D;
-    z-index: 3;
-    display: none;
-}
-
-.selectWrapper::before {
-    left: 0;
-}
-
-.selectWrapper::after {
-    right: 0;
-}
-
-.selectContainer.active .selectWrapper::before,
-.selectContainer.active .selectWrapper::after {
-    display: block;
+  content: '';
+  position: absolute;
+  inset: 0;
+  border: 1px solid var(--text-dominant);
+  border-radius: 12px;
+  pointer-events: none;
+  z-index: 11;
 }
