--- a/src/widgets/FilterSidebar/FilterSidebar.module.css
+++ b/src/widgets/FilterSidebar/FilterSidebar.module.css
@@ -1,5 +1,5 @@
 .filterSidebar {
-    padding: 20px 20px 20px 23px;
+    padding: 20px;
     background-color: var(--surface-main);
     border-radius: 12px;
     width: 324px;
@@ -25,6 +25,11 @@
     line-height: 28px;
     color: var(--text-dominant);
     margin: 0;
+}
+
+.title::after {
+    content: attr(data-count);
+    display: var(--count-display, none);
 }
 
 .resetButton {
