--- a/src/shared/ui/TextArea/TextArea.module.css
+++ b/src/shared/ui/TextArea/TextArea.module.css
@@ -21,7 +21,7 @@
     min-height: 96px;
     border: 1px solid var(--text-secondary);
     border-radius: 12px;
-    padding: 12px 20px;
+    padding: 12px 48px 12px 20px;
     overflow: hidden auto;
     color: var(--text-secondary, #69735d);
     font-family: var(--typeface-body);
