--- a/src/shared/ui/TextArea/TextArea.module.css
+++ b/src/shared/ui/TextArea/TextArea.module.css
@@ -16,12 +16,12 @@
 .textarea {
     position: relative;
     box-sizing: border-box;
-    width: 436px;
-    height: 96px;
-    min-height: 96px;
+    width: 100%;
+    min-height: 120px;
     border: 1px solid var(--text-secondary);
     border-radius: 12px;
     padding: 12px 48px 12px 20px;
+    outline: none;
     overflow: hidden auto;
     color: var(--text-secondary, #69735d);
     font-family: var(--typeface-body);
@@ -33,11 +33,6 @@
     resize: none;
 }
 
-.textarea:focus {
-    border-color: var(--text-secondary);
-    outline: none;
-}
-
 .textarea:disabled {
     opacity: 0.7;
     background-color: #f5f5f5;
@@ -46,6 +41,11 @@
 
 .svg-wrapper {
     position: relative;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    font-size: 0;
+    line-height: 0;
 }
 
 .svg-wrapper > svg {
