feature: corrections according to review

--- a/src/widgets/Header/Header.module.css
+++ b/src/widgets/Header/Header.module.css
@@ -232,6 +232,7 @@
 
 .notificationsDropdown {
     position: absolute;
+    padding: 60px;
     top: calc(100% + 32px);
     right: -167px;
     opacity: 0;
